Move remote-related encryption to remote module, refine error handling on remote adapter
