# src/server/rest/openapi.json
@@ -235,6 +235,41 @@
       }
     },
     "/keystore/{keystoreId}": {
+      "get": {
+        "description": "Returns a keystore",
+        "operationId": "Keystore",
+        "parameters": [
+          {
+            "name": "keystoreId",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Keystore",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Keystore"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
       "patch": {
         "description": "Updates a keystore",
         "operationId": "UpdateKeystore",
